# SRtools

./: .gitignore  LICENSE  MANIFEST.in  OPENISSUES.txt  README.md  RELEASE.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test.ipynb  test2.ipynb  test_life_table_loader.py  test_prior_data.npz
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
SRtools/: SR_hetro.py  SRmodellib.py  SRmodellib_lifelines.py  SRmodellib_temp.py  __init__.py  auto_initial_guess.py  boltsman_stats.py  calibration_report.py  cluster_utils.py  config_lib.py  deathTimesDataSet.py  distance_metrics.py  initialParamsFinder.py  intervention_SR.py  joint_posterior.py  legacy_classes.py  life_table.py  makhamGompertzFitter.py  plotting_utils.py  presets.py  prior_gen.py  probability.py  readResults.py  readResultsBaysian.py  samples_utils.py  species_config_builder.py  sr_mcmc.py  trajectory_analysis.py  utils.py  weibullFitter.py
SRtools/Preset_values/: All_config.csv  summery_max_likelihood.csv  summery_mode.csv  summery_mode_overall.csv
SRtools/extras/: README.md  SR_ddd.py  SR_timescales.py  __init__.py
SRtools/extras/Preset_values/smurfs/: All_config.csv  summery_max_likelihood.csv  summery_mode.csv  summery_mode_overall.csv
app/: README.md  requirements.txt  run_auto_calibration.py  set_base_prefix.py  streamlit_app.py  tune_defaults.py
docs/: conf.py  index.md  installation.md
docs/api/: dataset.md  index.md  mcmc.md  models.md  posterior.md  presets.md
docs/tutorials/: custom_models.md  index.md  loading_data.md  mcmc_fitting.md  presets.md
posterior_csvs/DROSOPHILA/: drosophila_217_post_data.npz
tests/: test_auto_initial_guess.py  test_calibration_report.py  test_initial_params_finder.py  test_smoke.py  test_species_config_builder.py
