[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srtools-aging"
version = "0.1.0"
description = "Tools for mortality and aging analysis using the Saturating Removal model"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Naveh Raz", email = "Naveh.Raz@weizmann.ac.il" },
]
keywords = ["aging", "mortality", "survival-analysis", "saturating-removal-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "numba>=0.54.0",
    "joblib>=1.1.0",
    "lifelines>=0.26.0",
    "autograd>=1.3",
    "emcee>=3.1.0",
    "tqdm>=4.62.0",
    "plotly>=5.3.0",
    "h5py>=3.7.0",
    "statsmodels>=0.13.0",
    "astropy>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=7.0.0",
    "twine>=5.0.0",
]
app = [
    "streamlit>=1.32.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.1",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/NavehRaz/SRtools"
Repository = "https://github.com/NavehRaz/SRtools"
Issues = "https://github.com/NavehRaz/SRtools/issues"

[tool.setuptools.packages.find]
include = ["SRtools*"]
exclude = ["app*", "tests*"]

[tool.setuptools.package-data]
SRtools = [
    "Preset_values/*.csv",
    "Preset_values/old/*.csv",
    "extras/*.md",
    "extras/Preset_values/smurfs/*.csv",
]

[tool.setuptools.exclude-package-data]
"*" = [".DS_Store", "._*", "__pycache__/*", "*.pyc", "*.pyo"]
